feat(fc-msa-gocoupon): add api v1
