# fc-msa-gocoupon/coupon-service/api/v1/handler/handler.go
@@ -4,3 +4,7 @@ package handler
 // @version 1.0
 // @description Coupon API V1
 // @BasePath /api/v1
+
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name X-USER-ID
